--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,11 +16,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, macos-latest] # Stay on 2019 for Windows SDK Version 10.0.16299.0
-
+        os: [windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: microsoft/setup-msbuild@v1.1
+        if: startsWith(matrix.os, 'windows')
+      - name: Install Windows SDK Version 10.0.16299.0
+        uses: GuillaumeFalourd/setup-windows10-sdk-action@v1.11
+        with:
+            sdk-version: 16299
         if: startsWith(matrix.os, 'windows')
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
       - name: Build Solution with MSBuild
