Setting minimum system version so it compiles on older versions of Xamarin.Mac

--- a/Samples/Sample.Xamarin.Mac/Info.plist
+++ b/Samples/Sample.Xamarin.Mac/Info.plist
@@ -26,5 +26,7 @@
 	<string>Main</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.14</string>
 </dict>
 </plist>
