--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,10 +21,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: microsoft/setup-msbuild@v1.1
         if: startsWith(matrix.os, 'windows')
+        # By default, the latest Windows machine doesn't come with the 16299 SDK installed,
+        # which is requited for building the UWP platform.
       - name: Install Windows SDK Version 10.0.16299.0
-        uses: GuillaumeFalourd/setup-windows10-sdk-action@v1.11
-        with:
-            sdk-version: 16299
+        run:
+            pwsh ./scripts/install-win-sdk.ps1 16299
         if: startsWith(matrix.os, 'windows')
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
       - name: Build Solution with MSBuild
