--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -48,7 +48,7 @@
 	</ItemGroup>	
 
 	<ItemGroup>
-		<PackageReference Include="Sentry" Version="3.33.1" />
+		<PackageReference Include="Sentry" Version="4.0.0-beta.4" NoWarn="NU5104" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
 	</ItemGroup>
 
@@ -66,12 +66,14 @@
 	
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
 		<Compile Include="Internals\**\*.droid*.cs" />
-		<PackageReference Include="Sentry.Android.AssemblyReader" Version="1.0.0" />
+		<PackageReference Include="Sentry.Android.AssemblyReader" Version="4.0.0-beta.4" NoWarn="NU5104" />
+		<PackageReference Include="System.Reflection.Metadata" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
 		<Compile Include="Internals\**\*.uwp*.cs" />
 		<PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
+		<PackageReference Include="System.Reflection.Metadata" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) ">
