--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.41">
+﻿<Project Sdk="MSBuild.Sdk.Extras/2.1.2">
 	<PropertyGroup>
 	    <!--Generate xml docs for all projects under 'src'-->
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -15,6 +15,7 @@
 
 		<_WriteTelemetryProperties>false</_WriteTelemetryProperties>
 		<DefineConstants>$(AdditionalConstants)</DefineConstants>
+		<BuildWithMSBuildOnMono>true</BuildWithMSBuildOnMono>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" $(TargetFramework.StartsWith('Xamarinios')) ">
