--- a/Samples/Sample.Xamarin.Mac/Directory.Build.props
+++ b/Samples/Sample.Xamarin.Mac/Directory.Build.props
@@ -1,4 +1,4 @@
-21312312<Project>
+<Project>
   <!--Automatic upward search ends when first file found. From here we need to manually import parent props/targets
         https://docs.microsoft.com/en-us/visualstudio/msbuild/customize-your-build -->
   <Import Project="..\..\Directory.Build.props" />
