--- a/Src/Directory.Build.props
+++ b/Src/Directory.Build.props
@@ -7,6 +7,9 @@
     <!--Generate xml docs for all projects under 'src'-->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
+    <!-- TODO: Remove when Sentry is out of beta. -->
+    <NoWarn>$(NoWarn);NU5104</NoWarn>
+
     <!-- CS1591: Missing XML comment for publicly visible type or member -->
     <NoWarn Condition="'$(Configuration)' == 'Debug'">$(NoWarn);CS1591</NoWarn>
 
@@ -54,16 +57,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SIL.ReleaseTasks" Version="2.2.0" PrivateAssets="All"/>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="4.0.0" PrivateAssets="All" Condition="'$(Configuration)' != 'Release'" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <!-- To add files to the PublicAPI.Unshipped file, use a VS quick action. Once shipped, move to PublicAPI.Shipped.txt -->
-    <None Remove="PublicAPI.Shipped.txt" />
-    <None Remove="PublicAPI.Unshipped.txt"/>
-    <AdditionalFiles Include="PublicAPI.Shipped.txt" />
-    <AdditionalFiles Include="PublicAPI.Unshipped.txt" />
+    <PackageReference Include="SIL.ReleaseTasks" Version="2.5.0" PrivateAssets="All"/>
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="5.0.0.1" PrivateAssets="All" Condition="'$(Configuration)' != 'Release'"/>
   </ItemGroup>
 </Project>
