--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.41">
+﻿<Project Sdk="MSBuild.Sdk.Extras/2.1.2">
 	<PropertyGroup>
 	    <!--Generate xml docs for all projects under 'src'-->
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -15,6 +15,7 @@
 
 		<_WriteTelemetryProperties>false</_WriteTelemetryProperties>
 		<DefineConstants>$(AdditionalConstants)</DefineConstants>
+		<BuildWithMSBuildOnMono>true</BuildWithMSBuildOnMono>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" $(TargetFramework.StartsWith('Xamarinios')) ">
@@ -48,7 +49,7 @@
 	</ItemGroup>	
 
 	<ItemGroup>
-		<PackageReference Include="Sentry" Version="3.33.1" />
+		<PackageReference Include="Sentry" Version="4.0.0-beta.5" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
 	</ItemGroup>
 
@@ -66,7 +67,7 @@
 	
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
 		<Compile Include="Internals\**\*.droid*.cs" />
-		<PackageReference Include="Sentry.Android.AssemblyReader" Version="1.0.0" />
+		<PackageReference Include="Sentry.Android.AssemblyReader" Version="4.0.0-beta.5" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
