--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,12 +28,12 @@ jobs:
             pwsh ./scripts/install-win-sdk.ps1 16299
         if: startsWith(matrix.os, 'windows')
       - name: Setup Java SDK
-        if: startsWith(matrix.os, 'windows')
+
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
-          distribution: 'microsoft'
-
+          distribution: 'temurin'
+          java-version: '17'
+          
       - name: Setup Android SDK
         uses: android-actions/setup-android@07976c6290703d34c16d382cb36445f98bb43b1f # v3.2.0
         with:
