--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,8 +50,10 @@ jobs:
         run: |
           if [ "${{ matrix.os }}" == "windows-latest" ]; then
             msbuild Sentry.Xamarin.sln -p:Configuration=Release
+            echo WINDOWS
           else
-            msbuild Sentry.Xamarin.sln -p:Configuration=Release -p:SkipProjects=Sample.Xamarin.UWP.cspro;Sentry.Xamarin.Forms.UWP.Tests.csproj
+            echo MAC
+            msbuild Sentry.Xamarin.sln -p:Configuration=Release -p:SkipProjects=Sample.Xamarin.UWP.csproj;Sentry.Xamarin.Forms.UWP.Tests.csproj
           fi
 
       - name: Restore iOS Sample app NuGet
