--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,9 +28,6 @@ jobs:
             pwsh ./scripts/install-win-sdk.ps1 16299
         if: startsWith(matrix.os, 'windows')
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-
       - name: Setup Java SDK
 
         uses: actions/setup-java@v4
@@ -44,7 +41,7 @@ jobs:
           packages: 'platforms;android-30'
       - name: Setup Xamarin MacOS SDK
         if: startsWith(matrix.os, 'macos')
-        run: brew install --cask xamarin-ios
+        run: brew install --cask xamarin-mac
       - name: Setup Xamarin iOS SDK
         if: startsWith(matrix.os, 'macos')
         run: brew install --cask xamarin-android
@@ -55,14 +52,7 @@ jobs:
 
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
       - name: Build Solution with MSBuild
-        run: |
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            msbuild Sentry.Xamarin.sln -p:Configuration=Release
-            echo WINDOWS
-          else
-            echo MAC
-            msbuild Sentry.Xamarin.sln -p:Configuration=Release -p:SkipProjects=Sample.Xamarin.UWP.csproj;Tests/Sentry.Xamarin.Forms.UWP.Tests/Sentry.Xamarin.Forms.UWP.Tests.csproj
-          fi
+        run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
 
       - name: Restore iOS Sample app NuGet
         run: msbuild Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj -p:Configuration=Release -t:restore
